<resources>
    <string name="app_name">Find My Squad</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="licensekey">jsfIN9hMadRpYq94mf+q9JKtGmqN/vI1TR7iXIlrY1aoJeSKvGE4SFFKEFw+IeE7dBZKk2XawgItc9QngQ5SAV/ay0kG76VF9LLRgr3fCC77FNZlsg6gIQpY6G+UwgfbzhEoYjrJfeZZ04wJ376u6f7GEYiphmEwxQlokHFdiYNTYWx0ZWRfX0pHUQdND+pp/NiHgOYNC0sNRsnHpo+TiRXFq+QW5MG0/tDE51VbRhc43j/1P8s/76ZLoignolch+lhnMTJonTT0Rn/T5TypxPJF2B9ME/3089pGND1KEtPdGSvXY2bL/fgK9NIDQUScbv7pXfVbdGBbj80LWznYnjovM1Gv8wRdHlrpnQ/rGqggWecVZnaQlu3ciOdsQouiUPZ0G/QKK/NIfOTg2Gzs9olOI8aQSE8VjsSHKDAdTH3bpnRmfnVs2yiYUMBRzHLZmQ1rL7G1rx7evm25V2HIJzUyWbhYdyg5E22DflQhIolpLbRIaoSQmPIb9SiCJDZfAN05YFDohAH2LF5bxvKSKPVcMjmRlFBwQZ6HK6SxqVizCxnjvDi/SxTxfrp+V5aZv+3EubWO6fdzJ9lL/+tGqivesi49TUwJUXiYqBKsoXjgRv6Zq/3kCyaQ3I5jpfS20c3k/6nd3cQyORt1MHOsIWpuQWWjaK4Inlu9GHQQ16E=</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map_nav_drawer">MapNavDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- Strings for profile prompts and headings -->
    <!--Headings-->
    <string name="heading_login">Welcome Back!</string>
    <string name="heading_signup">Create your account</string>
    <!-- Prompts -->
    <string name="email_prompt">Enter your email</string>
    <string name="password_prompt">Enter your password</string>
    <string name="nickname_prompt">Enter your nickname</string>
    <string name="title_activity_login">Log in</string>

    <string name="map_removewaypoint">Remove</string>
    <string name="map_editwaypoint">Edit</string>
    <string name="map_sharewaypoint">Share</string>
    <string name="map_copy">Copy</string>
    <string name="map_waypointtitle">Ark\'s Waypoint</string>
    <string name="map_hideinAR">Hide</string>
    <string name="map_message">Message</string>
    <string name="map_Navigate">Navigate</string>
    <string name="map_dist_away">Away</string>
    <string name="map_dist_from_waypoint">from Waypoint</string>
    <string name="waypointremoved">Waypoint Removed</string>
    <string name="undo_string">Undo</string>
    <string name="serverip">52.65.97.117</string>

    <string name="sign_up_prompt">Don\'t have an account? &#13;&#10;Click here to register!</string>
    <string name="group_name_prompt">Enter group name (no spaces)</string>
    <string name="title_location_permission">Location Needed!</string>
    <string name="text_location_permission">We need your location for this app to work!</string>
    <string name="ok">Okay</string>
    <string name="title_activity_debugging">Debugging</string>

    <!--login error prompts-->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_match">The passwords must match</string>



</resources>
